@@ -1,3 +1,6 @@
+2016/07/22: IGAS v100
+    1. Fix the memory increment for layoutpanel system.
+
 2016/07/22: IGAS v99
     1. Add 'INCLUDE_NAME_PLATE_ONLY' for aura filter.
 
